--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
             <version>4.5</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>me.prettyprint</groupId>
+            <artifactId>hector-core</artifactId>
+            <version>1.0-2</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -80,5 +85,40 @@
             </plugin>
         </plugins>
         <finalName>archive</finalName>
+        <pluginManagement>
+        	<plugins>
+        		<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+        		<plugin>
+        			<groupId>org.eclipse.m2e</groupId>
+        			<artifactId>lifecycle-mapping</artifactId>
+        			<version>1.0.0</version>
+        			<configuration>
+        				<lifecycleMappingMetadata>
+        					<pluginExecutions>
+        						<pluginExecution>
+        							<pluginExecutionFilter>
+        								<groupId>
+        									com.reucon.maven.plugins
+        								</groupId>
+        								<artifactId>
+        									maven-openfire-plugin
+        								</artifactId>
+        								<versionRange>
+        									[1.0.2-SNAPSHOT,)
+        								</versionRange>
+        								<goals>
+        									<goal>jspc</goal>
+        								</goals>
+        							</pluginExecutionFilter>
+        							<action>
+        								<ignore></ignore>
+        							</action>
+        						</pluginExecution>
+        					</pluginExecutions>
+        				</lifecycleMappingMetadata>
+        			</configuration>
+        		</plugin>
+        	</plugins>
+        </pluginManagement>
     </build>
 </project>
